6899058: G1: Internal error in ptrQueue.cpp:201 in nightly tests

Fixes a race on the dirty card queue completed buffer list between worker thread(s) performing a flush of a deferred store barrier (enqueueing a newly completed buffer) and worker thread(s) in the RSet updating code claiming completed buffers. Removed the routine that removes elements from the completed update buffer queue using a CAS.

Reviewed-by: ysr, tonyp